Analitics feature and readme update
